# MASH

./: .gitignore  README.md
docs/: INSTALL.md  epics_july.md  flux_movement.md  forest_malaria.md  tar_movement.md
docs/project/: README.md  code_parts.md  epics.md  goals.md  index.md  individualmosquito.md  install.md  matingqueue.md  mixtimesteps.md  parameter_passing.md  parasitestrains.md  risks.md  sampling-multinom.md  stakeholders.md  stories.md  technical.md
macro/: .Rbuildignore  .clang_complete  .gitignore  DESCRIPTION  LICENSE  NAMESPACE
macro.pfmoi/: DESCRIPTION  NAMESPACE
macro.pfmoi/Meta/: vignette.rds
macro.pfmoi/R/: Human-PfMOI.R  RcppExports.R  zzz.R
macro.pfmoi/doc/: example.Rmd  example.html
macro.pfmoi/inst/doc/: example.R
macro.pfmoi/man/: human_pfmoi_conpars.Rd  patches_header.Rd  pfmoi_parameters.Rd  run_macro.Rd  vaccination_pfmoi_conpars.Rd
macro.pfmoi/src/: Human-PfMOI.cpp  RNG.cpp  RcppExports.cpp  Tile.cpp  main.cpp
macro.pfmoi/vignettes/: .gitignore
macro.pfsi/: .gitignore  DESCRIPTION  NAMESPACE  main.R
macro.pfsi/Meta/: vignette.rds
macro.pfsi/R/: Human-PfSI.R  Mosquito-RM.R  PfSI-Parameters.R  RcppExports.R  zzz.R
macro.pfsi/doc/: example.html
macro.pfsi/inst/doc/: example.R
macro.pfsi/inst/include/: Parameters.hpp  Patch.hpp  RNG.hpp
macro.pfsi/man/: human_pfsi_conpars.Rd  macro.pfsi-package.Rd  mosquito_rm_conpars.Rd  pfsi_parameters.Rd  run_macro.Rd
macro.pfsi/src/: Event-Move.cpp  Event-PfSI.cpp  Human-PfSI.cpp  Makevars  Makevars.win  Patch.cpp  RcppExports.cpp  Tile.cpp  main.cpp
macro.pfsi/vignettes/: .gitignore  example.Rmd  reservoir.Rmd
macro/R/: RcppExports.R  bloodmeal_constant.R  bloodmeal_daily.R  bloodmeal_density.R  bloodmeal_linear.R  bloodmeal_mbites.R  bloodmeal_rate.cpp  continuous_step.R  discrete_equations.R  discrete_step.R  exponential_bites.R  forced_si.R  human_constant.R  human_si.R  lag_mosquito.R  location_flux.R  location_simpletrip.R  logging.R  macro.R  mbites_loop.R  module_loop.R  mosquito_rm.R  move-module.R  observer.R  parameter_pack.R  pfsi.R  play.R  protocol_sample.R  random.R  simpletrip.R  single_location.R  test-helpers.R
macro/man/: assign_levels_to_bites.Rd  assign_mosquito_status.Rd  bites_at_location.Rd  bld_bite_outcomes.Rd  bld_bites_at_location.Rd  bld_bloodmeal_process.Rd  bld_combine_health_and_movement.Rd  bld_convert_to_enter_events.Rd  bld_convert_to_source_destination.Rd  bld_health_as_events.Rd  bld_location_next_state.Rd  bld_single_day.Rd  bloodmeal_constant_module.Rd  bloodmeal_density.Rd  bloodmeal_density_module.Rd  bloodmeal_linear_module.Rd  bloodmeal_process.Rd  build_biting_parameters.Rd  build_biting_state.Rd  build_internal_parameters.Rd  build_world.Rd  check_continuous_setup.Rd  cluster_logging.Rd  cme_maker.Rd  combine_health_and_movement.Rd  complete_observer.Rd  continuous_simulation.Rd  continuous_step.Rd  convert_to_enter_events.Rd  convert_to_r_movement.Rd  convert_to_source_destination.Rd  data_table_to_array.Rd  day_within_year.Rd  exact_exponential.Rd  exponential_bite_module.Rd  fire.Rd  flux_module.Rd  flux_movement_init.Rd  flux_movement_step.Rd  flux_observer.Rd  (+129 more)
macro/src/: CMakeLists.txt  Makevars  Makevars.win  README.md  RcppExports.cpp  flux_movement_wrap.cpp  markov_flow_wrap.cpp  random.cpp  tar_movement_wrap.cpp
macro/src/flux_movement/: CMakeLists.txt  flux_movement.cpp  flux_movement.h  flux_movement_test.cpp  multinomial.cpp
macro/src/markov_flow/: CMakeLists.txt  markov_flow.cpp  markov_flow.h  markov_flow_test.cpp  markov_flow_wrap.cpp  multinomial.cpp  multinomial.h
macro/src/tar_movement/: tar_movement.cpp  tar_movement.h
macro/tests/: testthat.R
macro/tests/testthat/: test-bloodmeal_daily.R  test-bloodmeal_density.R  test-bloodmeal_linear.R  test-continuous_step.R  test-flux-movement.R  test-flux.R  test-forced_si.R  test-human_constant.R  test-human_si.R  test-logging.R  test-markov-flow.R  test-module_loop.R  test-mosquito_rm.R  test-parameter_pack.R  test-random.R  test-simpletrip.R
macro/vignettes/: bloodmeal_investigate.Rmd  bloodmeal_options.Rmd  design_meta_timestep.Rmd  firapreamble.tex  fluxmovement.Rmd  hook_mbites.Rmd  hook_only.Rmd  hook_together.Rmd  mainloop_design.Rmd  mash_modules.Rmd  mosquito_description.Rmd  mosquito_rm_play.Rmd  pfSI.Rmd  pfSI.bib  protocol_focus.Rmd  simpletrip.Rmd  single_jump.Rmd
queue/: DESCRIPTION  NAMESPACE
queue/R/: aquatic_poisson.R  human_si.R  mosquito_rm.R  queue.R
queue/man/: Aquatic_Poisson.Rd  Human_SI.Rd  Mosquito_RM.Rd  build_biting_parameters.Rd  build_internal_parameters.Rd  hsi_pop_events.Rd  long_term.Rd  look_back_eip.Rd  mosquito_rm_convert_bloodmeal.Rd  mosquito_rm_dynamics.Rd  mrm_check_parameters.Rd  queue.Rd  sample_mosquito_kappa.Rd  shift_with_open_interval.Rd
queue/tests/: testthat.R
queue/tests/testthat/: test-aquatic_poisson.R  test-human_si.R  test-mosquito_rm.R
scope/: app.R
